--- a/css/estilos.css
+++ b/css/estilos.css
@@ -26,30 +26,25 @@ header {
     color: black;
     background-color: transparent; }
 
-.botonDeInicio, .opciones {
+.botonDeInicio, .opciones, .opciones4 {
   color: #6c757d;
-  background-color: #f3c4fb;
   border: none;
   font-size: 20px;
-  box-shadow: none; }
-
-.botonDeInicio, .opciones {
-  background: transparent;
   box-shadow: none;
-  border: none; }
-
-.opciones {
-  font-size: 15px;
-  text-decoration: none; }
+  background: transparent;
+  font-family: 'Urbanist', sans-serif; }
 
 .icon10 {
   font-size: 18px;
-  color: #6c757d; }
+  color: #283845; }
   .icon10:hover {
-    background: none; }
+    color: #fffcf7; }
 
-.opciones:hover {
-  color: #fffcf7; }
+.opciones, .opciones4 {
+  font-size: 15px;
+  text-decoration: none; }
+  .opciones:hover, .opciones4:hover {
+    color: #fffcf7; }
 
 .efecto {
   box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.095);
@@ -78,9 +73,9 @@ header {
     transform: translateY(1%); } }
 
 .lugar {
-  color: #6c757d;
+  color: #283845;
   font-size: 15px;
-  font-family: 'Barlow Condensed', sans-serif; }
+  font-family: 'Urbanist', sans-serif; }
 
 .icon7 {
   color: #6c757d;
@@ -101,34 +96,52 @@ header {
     transform: translateY(50%) translateY(25%); } }
 
 .footer-s {
-  color: #6c757d;
+  color: #283845;
   top: 58%;
-  font-family: 'Barlow Condensed', sans-serif; }
+  font-family: 'Urbanist', sans-serif; }
   .footer-s:hover {
     color: #283845; }
 
 .footer-Seguinos {
-  color: #6c757d;
-  font-size: 15px; }
+  color: #283845;
+  font-size: 18px;
+  font-family: 'Urbanist', sans-serif; }
 
 .footer-c {
-  color: #6c757d;
+  color: #283845;
   font-size: 15px;
-  font-family: 'Barlow Condensed', sans-serif; }
+  font-family: 'Urbanist', sans-serif; }
 
 .textoOpc {
   cursor: pointer; }
 
-.texto, .textoCyR {
+.textoIndx {
+  font-family: 'Urbanist', sans-serif; }
+
+.mediaMenu {
+  font-family: 'Urbanist', sans-serif; }
+
+.texto {
   color: #6c757d; }
-  .texto:hover, .textoCyR:hover {
+  .texto:hover {
     color: #283845; }
 
+.textoCyR {
+  color: #283845;
+  padding: 10px 25px;
+  text-decoration: none;
+  transition: 0.2s;
+  font-family: 'Urbanist', sans-serif; }
+  .textoCyR:hover {
+    background: #c8b6ff;
+    transition-delay: 0.2s;
+    color: #fffcf7; }
+
 .header_menu {
-  color: #6c757d;
+  color: #283845;
   text-transform: uppercase;
   font-size: 18px;
-  font-family: 'Noto Sans', sans-serif; }
+  font-family: 'Francois One', sans-serif; }
   .header_menu:hover {
     color: white; }
 
@@ -186,7 +199,7 @@ header {
   cursor: pointer; }
 
 .textoCategorias {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Urbanist', sans-serif;
   font-size: 18px;
   color: #fffcf7; }
   .textoCategorias:hover {
@@ -238,7 +251,9 @@ header {
   .textoCategorias {
     font-size: 15px; }
   .imagenFondo {
-    width: 50%; } }
+    width: 50%; }
+  .nombreLogo {
+    width: 30%; } }
 
 @media (min-width: 500px) {
   .header_menu {
@@ -292,10 +307,7 @@ header {
 
 @media (min-width: 768px) {
   header {
-    font-size: 12px; }
-  .header_menu {
-    font-size: 12px;
-    visibility: hidden; }
+    font-size: 15px; }
   footer {
     font-size: 14px; }
   .logoTarjeta {
@@ -316,7 +328,15 @@ header {
   .textoCyR {
     visibility: visible; }
   .imagenFondo {
-    width: 25%; } }
+    width: 25%; }
+  .opciones4 {
+    visibility: hidden; }
+  .nombreLogo {
+    width: 50%; }
+  .footer-c {
+    text-align: end; }
+  .lugar {
+    text-align: start; } }
 
 @media (min-width: 992px) {
   header {
@@ -338,19 +358,28 @@ header {
     margin: 0;
     top: -60%; }
   .imagenFondo {
-    width: 20%; } }
+    width: 20%; }
+  .footer-c {
+    text-align: end; }
+  .lugar {
+    text-align: start; } }
 
 @media (min-width: 1200px) {
   header {
     font-size: 15px; }
   .header_menu {
-    visibility: hidden; }
+    visibility: visible; }
   .dropdown {
     padding: 0;
     margin: 0;
-    top: -60%; }
+    top: -60%;
+    visibility: hidden; }
   .imagenFondo {
-    width: 15%; } }
+    width: 15%; }
+  .footer-c {
+    text-align: end; }
+  .lugar {
+    text-align: start; } }
 
 @media (min-width: 1570px) {
   header {
