--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -153,7 +153,7 @@
         width: 50%;
     }
     .nombreLogo{
-        width: 30%;
+        width: 35%;
     }
 }
 //Media Query 500//
@@ -375,6 +375,9 @@
     }
     .imagenFondo{
         width: 10%;
+    }
+    .nombreLogo{
+        width: 35%;
     }
 
 }
