actualizacion del proyecto 20-09

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -124,6 +124,9 @@ header {
 .mediaMenu {
   font-family: 'Urbanist', sans-serif; }
 
+.titulos {
+  font-family: 'Urbanist', sans-serif; }
+
 .texto {
   color: #6c757d; }
   .texto:hover {
